Mozilla scrollbar & Social Icon Hover bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,18 @@ body {
   color: #fcfcfc;
 }
 
+html *::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+  appearance: none;
+}
+
 body * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-}
-
-body *::-webkit-scrollbar {
-  display: none;
 }
 
 body > #root {
